# Stage3

./: .gitignore  README.md  arm-gcc-toolchain.cmake  backup_and_push.sh  build_and_run.sh  generate_stage3.sh  toolchain.cmake
Stage3/: build_and_run.sh  toolchain.cmake
minimal_chibios/: .gitignore  CMakeLists.txt  settings.cmake  setup_and_run_vesc_ramp.shr
minimal_chibios/include/: led.hpp  thread.hpp  uart.hpp
minimal_chibios/motor_control_backup_20250930_213221/: motor.cfg
minimal_chibios/motor_control_backup_20250930_213221/include/: config.h
minimal_chibios/motor_control_backup_20250930_213221/src/: config.cpp  motor.cpp
minimal_chibios/motor_control_backup_20250930_213523/: CMakeLists.txt  backup_motor.sh
minimal_chibios/motor_control_backup_20250930_213523/include/: motor.h
minimal_chibios/motor_control_backup_20250930_213523/src/: main.cpp
minimal_chibios/motor_control_backup_20250930_223554/: backup_motor.sh  motor_run.sh
minimal_chibios/motor_control_backup_20250930_223554/include/: config.h  motor.h
minimal_chibios/motor_control_backup_20250930_223554/src/: config.cpp  main.cpp  motor.cpp
minimal_chibios/motor_control_backup_20250930_223616/: motor_control.sh
minimal_chibios/motor_control_backup_20250930_223616/include/: config.h  motor.h
minimal_chibios/motor_control_backup_20250930_223616/src/: config.cpp  main.cpp  motor.cpp
minimal_chibios/motor_control_original_backup_20250930_214604/include/: config.h  motor.h
minimal_chibios/motor_control_original_backup_20250930_214604/src/: config.cpp  main.cpp  motor.cpp
(+7 files in other folders)
